made about section and fixed some layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,9 @@ a {
   text-decoration: none;
   color: #000;
 }
+
+*,
+*::before,
+*::after {
+  margin: 0;
+}
