--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -34,9 +34,9 @@
 }
 
 .card__m {
-  margin: 0 1rem 0 1rem;
+  margin: 0.5rem 1rem 0 1rem;
 }
 
 .card p {
-  margin-bottom: 1rem;
+  margin: 1rem;
 }
