--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -13,6 +13,7 @@ header a:hover {
 header {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 1rem;
 }
 
